--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,31 @@
-Flask==3.0.3
-gunicorn==23.0.0
-numpy==2.1.1
-scikit-learn==1.5.2
-joblib==1.4.2
-pandas==2.2.2
-scipy==1.14.1
-Jinja2==3.1.4
-Werkzeug==3.0.4
-itsdangerous==2.2.0
-click==8.1.7
-blinker==1.8.2
-colorama==0.4.6
-python-dateutil==2.9.0
-pytz==2024.2
-tzdata==2024.1
-six==1.16.0
-threadpoolctl==3.5.0
-packaging==24.1
-setuptools>=69.0.0
-wheel>=0.44.0
-
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-flask==2.3.3
+Flask==2.3.3
 gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-MarkupSafe==2.1.3
-numpy==1.26.4
-packaging==23.2
+
+# Librerías esenciales para ML con versiones estables
+numpy==1.24.4
+scikit-learn==1.2.2
+joblib==1.2.0
 pandas==2.0.3
+scipy==1.10.1
+
+# Dependencias de Flask
+Jinja2==3.1.2
+Werkzeug==2.3.7
+itsdangerous==2.1.2
+click==8.1.7
+blinker==1.7.0
+colorama==0.4.6
+
+# Requerido por pandas
 python-dateutil==2.8.2
 pytz==2023.3
-scikit-learn==1.3.2
-scipy==1.11.4
+tzdata==2023.4
 six==1.16.0
 threadpoolctl==3.2.0
-tzdata==2023.4
-Werkzeug==2.3.7
+packaging==23.2
+
+# Requerido por pip en algunos entornos de Render
 setuptools>=61.0.0
 wheel>=0.38.0
+
+
